# gb_async_messenger

./: .gitignore  README.md  client.db  client.py  client_user1.db  jim_types.py  lesson_1.py  pyproject.toml  server.db  server.ini  server.py
alembic/: env.py
alembic/versions/: 19bb66beab60_users.py  b74ecdccd6b8_init.py
common/: __init__.py  exceptions.py  utils.py
config/: __init__.py  settings.py
docs/: conf.py  database.rst  index.rst
docs/_build/doctrees/: client.doctree  database.doctree  environment.pickle  index.doctree  server.doctree
docs/_build/html/: .buildinfo  client.html  database.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  server.html
docs/_build/html/_modules/: client.html  index.html  server.html
docs/_build/html/_modules/config/: settings.html
docs/_build/html/_sources/: client.rst.txt  index.rst.txt  server.rst.txt
git-hooks/: pre-commit
src/: client.py  client_read_message.py  client_send_message.py  launcher.py  ping_demo.py  server.py  setup_client.py  setup_client_exe.py  setup_server.py  setup_server_exe.py
src/AGBM_Client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/AGBM_Server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/amsg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/client/: client.py
src/client_gui/: __init__.py  add_contact.py  client_design.py  client_design.ui  del_contact.py  error_dialog.py  main_window.py  start_dialog.py
src/common/: __init__.py  decorators.py  exceptions.py  jim_types.py  metaclasses.py  utils.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  client_db.py  storage.py
src/log/: __init__.py  client_log_config.py  server.log.2023-06-20  server.log.2023-06-27  server_log_config.py
src/server/: server.py  server_gui.py
tests/: test_client.py  test_server.py  test_utils.py
(+3 files in other folders)
