[tool.pdm]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yuliya Bryukhovskikh", email = "makutu@ereb.ru"},
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=1.10.8",
    "pytest>=7.3.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}
