[tool.pdm]

[tool.pdm.scripts]
_.env = {PYTHONPATH = "src"}
server.cmd = "python src/server.py"
client.cmd = "python src/client.py"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[project]
name = "amsg"
version = "0.5"
description = "GB async messenger"
authors = [
    {name = "Yuliya Bryukhovskikh", email = "makutu@ereb.ru"},
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=1.10.8",
    "pytest>=7.3.1",
    "rich>=13.4.1",
    "chardet>=5.1.0",
    "ipaddress>=1.0.23",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
