[tool.pdm]

[tool.pdm.scripts]
_.env = {PYTHONPATH = "src"}
server.cmd = "python src/server.py"
client.cmd = "python src/client.py"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[tool.flake8]
max-line-length = 120
per-file-ignores = [
    '__init__.py:F401',
]

[project]
name = "amsg"
version = "0.5"
description = "GB async messenger"
authors = [
    {name = "Yuliya Bryukhovskikh", email = "makutu@ereb.ru"},
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=1.10.8",
    "pytest>=7.3.1",
    "rich>=13.4.1",
    "chardet>=5.1.0",
    "ipaddress>=1.0.23",
    "tabulate>=0.9.0",
    "SQLAlchemy>=2.0.17",
    "alembic>=1.11.1",
    "PyQt6>=6.5.1",
    "configparser>=5.3.0",
    "bcrypt>=4.0.1",
    "Flake8-pyproject>=1.2.3",
    "sphinx>=7.0.1",
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
